Rework build/logs rendering using React.js
This should improve performance when rendering long logs. It also adds
some structure in place for JS that might come in handy as a pattern
later, should we decide to beef up the UI.

 - Uses Fluxxor for modeling the "Flux" architecture
   - LogStore backed by the already existing SSE infrastructure
 - JS packages managed with npm `npm install` on the `web/javascript` directory
 should install all you need. `packages.json` manages all the
 dependencies.
 - Uses gulp for js/jsx compilation
   - Browserify for `require('...')` goodness
   - Few other gulp plugins to make js compilation happen
   - On the `web/javascript/` directory:
     - `gulp build`: builds assets (development)
     - `gulp watch`: builds assets (development), watching for changes
     - `NODE_ENV=production gulp build`:
       builds assets (production: uglify)

--- a/web/public/main.css
+++ b/web/public/main.css
@@ -236,7 +236,7 @@ pre {
   100% { opacity: 1.0; }
 }
 
-#build-log {
+.build-logs {
   margin: 0;
   padding: 10px;
 }
@@ -264,7 +264,7 @@ span.error {
 
 .build-resources.build-inputs:before,
 .build-resources.build-outputs:before,
-#build-log:before {
+.build-logs:before {
   font-size: 1.5em;
   font-weight: bold;
   display: block;
@@ -279,7 +279,7 @@ span.error {
   content: "outputs";
 }
 
-#build-log:before {
+.build-logs:before {
   content: "build";
 }
 
@@ -303,7 +303,7 @@ span.error {
 }
 
 .build-resources:empty,
-#build-log:empty {
+.build-logs:empty {
   display: none;
 }
 
