--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -42,6 +42,7 @@ svg .arrowhead-normal path { fill: @base03; }
 svg .gateway { fill: @base03; }
 .groups li.active a { background: @base03; }
 .build-source.first-occurrence .header { background: @base03; }
+svg .node.job.normal rect { fill: @base03; }
 
 /* dim */
 svg .path.pending { stroke: @base04; }
