--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -62,6 +62,7 @@
   for (var i = 0; i < inputResources.length; i++) {
     renderResource({ input: inputResources[i] }, "input");
   }
-  streamLog({{url "LogOutput" .Build | js}})
+
+  streamLog({{url "BuildEvents" .Build | js}})
 </script>
 {{end}}
