--- a/web/public/main.css
+++ b/web/public/main.css
@@ -357,6 +357,18 @@ span.error {
   padding: 20px;
 }
 
+#version-history tr.disabled {
+  opacity: 0.5;
+}
+
+#version-history .toggle-resource-version {
+  text-decoration: none;
+  display: inline-block;
+  line-height: 28px;
+  width: 60px;
+  text-align: center;
+}
+
 #version-history th {
   text-align: left;
   margin: 0;
