add new 'active build' animation for pipeline
pulsing isn't visible enough and doesn't use the 'started' color seen
elsewhere.

[#86376854]

Signed-off-by: Chris Brown <xoebus@xoeb.us>

--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -214,6 +214,9 @@ li.started {
 .legend dt.started {
   background: #f4bf75;
 }
+svg .node.job.started rect {
+  stroke: #f4bf75;
+}
 /* ansi text */
 ::selection {
   background: #505050;
