--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -109,6 +109,7 @@ li.aborted { background: @base0F; }
 #page-header.started .build-header { background: @base0A; }
 li.started { background: @base0A; }
 .legend dt.started { background: @base0A; }
+svg .node.job.started rect { stroke: @base0A; }
 
 /* ansi text */
 ::selection { background: @base03; color: @base07; }
