update 'started' ui in legend to reflect border ui
[#86376854]

Signed-off-by: Chris Brown <xoebus@xoeb.us>

--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -211,8 +211,8 @@ li.aborted {
 li.started {
   background: #f4bf75;
 }
-.legend dt.started {
-  background: #f4bf75;
+.legend dt.started rect {
+  stroke: #f4bf75;
 }
 svg .node.job.started rect {
   stroke: #f4bf75;
