--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -108,7 +108,7 @@ li.aborted { background: @base0F; }
 /* active */
 #page-header.started .build-header { background: @base0A; }
 li.started { background: @base0A; }
-.legend dt.started { background: @base0A; }
+.legend dt.started rect { stroke: @base0A; }
 svg .node.job.started rect { stroke: @base0A; }
 
 /* ansi text */
