--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,7 +13,7 @@
   <dl class="legend">
     <dt class="pending"></dt>
       <dd>pending</dd>
-    <dt class="started"><svg width="10" height="10"><g><rect width="10" height="10"></rect></g></svg></dt>
+    <dt class="started"></dt>
       <dd>started</dd>
     <dt class="succeeded"></dt>
       <dd>succeeded</dd>
