--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -217,12 +217,16 @@ li.started {
 svg .job.node.started div,
 .legend dt.started {
   -webkit-animation: started-stripes 1s linear infinite;
-  background-image: repeating-linear-gradient(-45deg, transparent, transparent 7px, #f4bf75 7px, #f4bf75 10px);
-  background-size: 28px 100%;
+  background-size: 30px 30px;
+  background-position: 10px 0;
+  background-image: linear-gradient(-45deg, #f4bf75 25%, transparent 25%, transparent 50%, #f4bf75 50%, #f4bf75 75%, transparent 75%, transparent);
 }
 @-webkit-keyframes started-stripes {
-  100% {
-    background-position: -28px 0px;
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 30px 0px;
   }
 }
 /* ansi text */
