invert running build colors
[#86376854]

--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -119,10 +119,10 @@ svg .job.node.started div,
   @{frame} {
     background-image: repeating-radial-gradient(
       circle,
-      transparent unit(@frame / 5, px),
-      transparent unit(@frame / 5, px) + 5px,
+      @base0A unit(@frame / 5, px),
       @base0A unit(@frame / 5, px) + 5px,
-      @base0A unit(@frame / 5, px) + 20px,
+      transparent unit(@frame / 5, px) + 5px,
+      transparent unit(@frame / 5, px) + 20px,
     );
   }
 
