--- a/web/public/main.css
+++ b/web/public/main.css
@@ -476,3 +476,16 @@ svg .active.node rect {
 svg .active.node text {
   font-size: 1.06em;
 }
+
+svg .node.job text {
+  fill: #fff;
+}
+
+svg .node.job text.shadow {
+  filter: url(#shadow);
+  fill: #000;
+}
+
+svg .node.resource text {
+  display: none;
+}
