--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -113,7 +113,6 @@ li.started { background: @base0A; }
 svg .job.node.started div,
 .legend dt.started {
   -webkit-animation: started-circles 1s linear infinite;
-  animation: started-circles 1s linear infinite;
 }
 
 .generate-keyframes(@frame: 0%) when (@frame =< 100%) {
@@ -134,8 +133,9 @@ svg .job.node.started div,
   .generate-keyframes(0%)
 }
 
-@keyframes started-circles {
-  .generate-keyframes(0%)
+@-webkit-keyframes started-stripes {
+  from { background-position: 0 0;    }
+  to   { background-position: 30px 0px; }
 }
 
 /* ansi text */
