--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -30,7 +30,6 @@ svg .node rect { fill: @base00; }
 #builds { background: @base00; }
 .builds-list { background: @base00; }
 .build-source .header { background: @base00; }
-#page-header { background: @base00; }
 
 /* highlight background */
 svg .cluster { fill: @base02; }
@@ -39,7 +38,6 @@ svg .cluster { fill: @base02; }
 /* even more highlight background */
 svg .edge { stroke: @base03; }
 svg .gateway { fill: @base03; }
-.groups li.active a { background: @base03; }
 .build-source.first-occurrence .header { background: @base03; }
 svg .node.job.normal rect { fill: @base03; }
 
@@ -72,7 +70,7 @@ svg h1 a { color: @base07; }
 /* good */
 svg .edge.succeeded { stroke: @base0B; }
 svg .node.job.succeeded rect { fill: @base0B; }
-#page-header.succeeded .build-header { background: @base0B; }
+#page-header.succeeded { background: @base0B; }
 li.succeeded { background: @base0B; }
 .legend dt.succeeded { background: @base0B; }
 #version-history tr.disabled .toggle-resource-version { background: @base0B; }
@@ -80,7 +78,7 @@ li.succeeded { background: @base0B; }
 /* bad */
 svg .edge.failed { stroke: @base08; }
 svg .node.job.failed rect { fill: @base08; }
-#page-header.failed .build-header { background: @base08; }
+#page-header.failed { background: @base08; }
 li.failed { background: @base08; }
 .legend dt.failed { background: @base08; }
 .build-header .abort-build input { color: @base08; }
@@ -91,7 +89,7 @@ span.error { color: @base08; }
 /* like, really bad */
 svg .edge.errored { stroke: @base09; }
 svg .node.job.errored rect { fill: @base09; }
-#page-header.errored .build-header { background: @base09; }
+#page-header.errored { background: @base09; }
 li.errored { background: @base09; }
 .legend dt.errored { background: @base09; }
 svg .node.resource.failing rect { fill: @base09; }
@@ -100,13 +98,13 @@ svg .node.resource.failing rect { fill: @base09; }
 /* not so bad */
 svg .edge.aborted { stroke: @base0F; }
 svg .node.job.aborted rect { fill: @base0F; }
-#page-header.aborted .build-header { background: @base0F; }
+#page-header.aborted { background: @base0F; }
 li.aborted { background: @base0F; }
 .legend dt.aborted { background: @base0F; }
 .build-header .abort-build input:active { background: @base0F; }
 
 /* active */
-#page-header.started .build-header { background: @base0A; }
+#page-header.started { background: @base0A; }
 li.started { background: @base0A; }
 .legend dt.started rect { stroke: @base0A; }
 
